--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -12,7 +12,6 @@
 .card {
     aspect-ratio: 3/4;
     width: 100%;
-    background: #333;
     border-radius: 5px;
     position: relative;
     transition: all 400ms ease;
@@ -27,10 +26,10 @@
     background-position: center;
     border: 2px solid var(--border-color);
     border-radius: 5px;
+    transition: all 400ms ease;
 }
 
 .front {
-    background-image: url(../img/monica.jpg);
     transform: rotateY(180deg);
 }
 
@@ -39,6 +38,11 @@
     backface-visibility: hidden;
 }
 
-.card:hover {
+.reveal-card {
     transform: rotateY(180deg);
+}
+
+.disabled-card {
+    filter: saturate(0);
+    opacity: 0.5;
 }
