:construction: feat: create the js rules for endgame

--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -41,6 +41,7 @@ header {
     position: relative;
     transition: all 400ms ease;
     transform-style: preserve-3d;
+    background-color: #ccc;
 }
 
 .face {
